# compro-lib

./: .gitignore  CMakeLists.txt  README.md  _config.yml  index.md  template.cpp  template.cpp.md
.verify-helper/: timestamps.remote.json
.verify-helper/docs/: _config.yml
.verify-helper/docs/data-structure/: union-find-tree.md
.verify-helper/docs/graph/: dijkstra.md  low-link.md  re-rooting.md  strongly-connected-components.md  warshall-floyd.md
.verify-helper/docs/mathematics/: mod-int.md  moebius.md  multi-prime-factorize.md
.verify-helper/docs/static/: _config.yml
data-structure/: fenwick-tree.hpp  fenwick-tree.hpp.md  lazy-segment-tree.hpp  lazy-segment-tree.hpp.md  partially-persistent-union-find-tree.hpp  partially-persistent-union-find-tree.hpp.md  red-black-tree.hpp  red-black-tree.hpp.md  segment-tree.hpp  segment-tree.hpp.md  segtree.hpp  segtree.hpp.md  splay-tree.hpp  splay-tree.hpp.md  union-find-tree.hpp  union-find-tree.hpp.md  weighted-union-find-tree.hpp  weighted-union-find-tree.hpp.md
docs/data-structure/: fenwick-tree.md  lazy-segment-tree.md  partially-persistent-union-find-tree.md  red-black-tree.md  segment-tree.md  splay-tree.md  union-find-tree.md  weighted-union-find-tree.md
docs/geometry/: geometry.md
docs/graph/: bellman-ford.md  bipartite-matching.md  dijkstra.md  dinic.md  ford-fulkerson.md  heavy-light-decomposition.md  to-rooted-tree.md  topological-sort.md  warshall-floyd.md
docs/marathon/: marathon.md
docs/mathematics/: bell-number-table.md  binomial-table.md  binomial.md  convolute.md  get-divisors.md  get-prime-table.md  matrix.md  mod-calc.md  mod-int.md  multi-prime-factorize-tmp.md  multi-prime-factorize.md  partition-table.md  permutation.md  prime-factorize.md  rational.md  stirling-number-2-table.md  xor-eliminate.md
docs/string/: parse.md  rolling-hash-2d.md  rolling-hash.md  run-length-encoding.md  trie.md
docs/utility/: binary-search.md  bit-reverse.md  fast-io.md  histogram-largest-rectancle.md  timer.md  xor64.md
dp/: fzt.hpp  fzt.hpp.md
geometry/: geometry.hpp  geometry.hpp.md
graph/: bellman-ford.hpp  bellman-ford.hpp.md  bipartite-matching.hpp  bipartite-matching.hpp.md  dijkstra.hpp  dijkstra.hpp.md  dinic.hpp  dinic.hpp.md  ford-fulkerson.hpp  ford-fulkerson.hpp.md  heavy-light-decomposition.hpp  heavy-light-decomposition.hpp.md  low-link.hpp  low-link.hpp.md  re-rooting.hpp  re-rooting.hpp.md  strongly-connected-components.hpp  strongly-connected-components.hpp.md  to-rooted-tree.hpp  to-rooted-tree.hpp.md  topological-sort.hpp  topological-sort.hpp.md  warshall-floyd.hpp  warshall-floyd.hpp.md
marathon/: marathon.hpp.md  template.hpp
mathematics/: bell-number-table.hpp  bell-number-table.hpp.md  binomial-table.hpp  binomial-table.hpp.md  binomial.hpp  binomial.hpp.md  convolute.hpp  convolute.hpp.md  convolution.hpp  get-divisors.hpp  get-divisors.hpp.md  get-prime-factors.hpp  get-prime-table.hpp  get-prime-table.hpp.md  matrix.hpp  matrix.hpp.md  mod-calc.hpp  mod-calc.hpp.md  mod-int.hpp  mod-int.hpp.md  moebius.hpp  moebius.hpp.md  multi-prime-factorize.hpp  multi-prime-factorize.hpp.md  partition-table.hpp  partition-table.hpp.md  permutation.hpp  permutation.hpp.md  prime-factorize.hpp  prime-factorize.hpp.md  rational.hpp  rational.hpp.md  stirling-number-2-table.hpp  stirling-number-2-table.hpp.md  xor-eliminate.hpp  xor-eliminate.hpp.md
string/: parse.hpp  parse.hpp.md  rolling-hash-2d.hpp  rolling-hash-2d.hpp.md  rolling-hash.hpp  rolling-hash.hpp.md  run-length-encoding.hpp  run-length-encoding.hpp.md  trie.hpp  trie.hpp.md
test/AOJ/ALDS1/: Binary-Search-0.test.cpp  Binary-Search-0.test.cpp.md  Pattern-Search-0.test.cpp  Pattern-Search-0.test.cpp.md  Prime-Numbers-0.test.cpp  Prime-Numbers-0.test.cpp.md  String-Search-0.test.cpp  String-Search-0.test.cpp.md
test/AOJ/CGL/: Convex-Hull-0.test.cpp  Convex-Hull-0.test.cpp.md
test/AOJ/DPL/: Balls-and-Boxes-10-0.test.cpp  Balls-and-Boxes-10-0.test.cpp.md  Balls-and-Boxes-5-0.test.cpp  Balls-and-Boxes-5-0.test.cpp.md  Balls-and-Boxes-7-0.test.cpp  Balls-and-Boxes-7-0.test.cpp.md  Balls-and-Boxes-9-0.test.cpp  Balls-and-Boxes-9-0.test.cpp.md  Largest-Rectangle-in-a-Histogram-0.test.cpp  Largest-Rectangle-in-a-Histogram-0.test.cpp.md
test/AOJ/DSL/: RMQ-and-RAQ-0.test  RMQ-and-RAQ-0.test.cpp  RMQ-and-RAQ-0.test.cpp.md  RMQ-and-RUQ-0.test.cpp  RMQ-and-RUQ-0.test.cpp.md  RSQ-and-RAQ-0.test.cpp  RSQ-and-RAQ-0.test.cpp.md  Range-Add-Query-0.test.cpp  Range-Add-Query-0.test.cpp.md  Range-Minimum-Query-0.test.cpp  Range-Minimum-Query-0.test.cpp.md  Range-Sum-Query-0.test.cpp  Range-Sum-Query-0.test.cpp.md  Range-Sum-Query-1.test.cpp  Range-Sum-Query-1.test.cpp.md  Union-Find-Tree-0.test.cpp  Union-Find-Tree-0.test.cpp.md  range-minimum-query-0.test.cpp  range-sum-query-0.test.cpp  rmq-and-ruq-0.test.cpp
test/AOJ/GRL/: All-Pairs-Shortest-Path-0.test.cpp  All-Pairs-Shortest-Path-0.test.cpp.md  Articulation-Points-0.test.cpp  Articulation-Points-0.test.cpp.md  Bipartite-Matching-0.test.cpp  Bipartite-Matching-0.test.cpp.md  Bridges-0.test.cpp  Bridges-0.test.cpp.md  Diameter-of-a-Tree-0.test.cpp  Diameter-of-a-Tree-0.test.cpp.md  Maximum-Flow-0.test.cpp  Maximum-Flow-0.test.cpp.md  Maximum-Flow-1.test.cpp  Maximum-Flow-1.test.cpp.md  Single-Source-Shortest-Path-0.test.cpp  Single-Source-Shortest-Path-0.test.cpp.md  Single-Source-Shortest-Path-Negative-Edges-0.test.cpp  Single-Source-Shortest-Path-Negative-Edges-0.test.cpp.md  Strongly-Connected-Components-0.test.cpp  Strongly-Connected-Components-0.test.cpp.md  single-source-shortest-path-0.test.cpp
test/AOJ/ITP1/: How-Many-Divisors-0.test.cpp  How-Many-Divisors-0.test.cpp.md
test/AOJ/ITP2/: Vector-0.test.cpp  Vector-0.test.cpp.md  Vector-1.test.cpp  Vector-1.test.cpp.md
test/AOJ/NTL/: Power-0.test.cpp  Power-0.test.cpp.md  Prime-Factorize-0.test.cpp  (+3 more)
utility/: binary-search.hpp  binary-search.hpp.md  bit-reverse.hpp  bit-reverse.hpp.md  fast-io.hpp  fast-io.hpp.md  histogram-largest-rectangle.hpp  histogram-largest-rectangle.hpp.md  timer.hpp  timer.hpp.md  xor64.hpp  xor64.hpp.md
(+38 files in other folders)
